syntax = "proto2";

package garmin_vivomovehr;

option java_package = "nodomain.freeyourgadget.gadgetbridge.proto.garmin";

import "garmin/gdi_device_status.proto";
import "garmin/gdi_find_my_watch.proto";
import "garmin/gdi_core.proto";
import "garmin/gdi_http_service.proto";
import "garmin/gdi_installed_apps_service.proto";
import "garmin/gdi_data_transfer_service.proto";
import "garmin/gdi_sms_notification.proto";
import "garmin/gdi_calendar_service.proto";
import "garmin/gdi_settings_service.proto";

message Smart {
    optional CalendarService calendar_service = 1;
    optional HttpService http_service = 2;
    optional InstalledAppsService installed_apps_service = 3;
    optional DataTransferService data_transfer_service = 7;
    optional DeviceStatusService device_status_service = 8;
    optional FindMyWatchService find_my_watch_service = 12;
    optional CoreService core_service = 13;
    optional SmsNotificationService sms_notification_service = 16;
    optional SettingsService settings_service = 42;
}
